# rag_surveillance_demo

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements copy.txt  requirements.txt  system_check.py
.github/workflows/: .dockerignore  sync.yml
constants/: audit.py
data/: placeholder.txt
docs/: README.md  mkdocs.yml
docs/docs/: index.md
src/: engine.py
sti_rag/: __init__.py  audit.py  config.py  config.yaml  engine.py
tests/: test_config.py  test_engine.py
