[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sti-surveillance-rag"
version = "0.1.0"
description = "Reasoning-based RAG assistant for STI surveillance manuals"
requires-python = ">=3.11"
dependencies = [
    "pageindex",
    "streamlit==1.43.0",
    "pypdf==4.3.1",
    "python-dotenv==1.0.1",
    "pandas==2.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sti_rag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
